app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: menghout009-react-restaurant-landing-page-ingress
  namespace: menghout009
spec:
  rules:
    - host: test.test.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: menghout009-react-restaurant-landing-page-svc
                port:
                  number: 3000
